added fonts page

--- a/app/partials/_head.jade
+++ b/app/partials/_head.jade
@@ -3,13 +3,14 @@ head
 	meta(name='description', content='')
 	meta(name='viewport', content='width=device-width, initial-scale=1')
 	title 92nd Co.
+	meta(name='description', content='92nd Collective')
 	// Place favicon.ico in the root directory
 	// build:css styles/vendor.css
 	// bower:css
 	// endbower
 	// endbuild
 	// build:css styles/main.css
-	link(rel='stylesheet', href='styles/main.css')
+	link(rel='stylesheet', href='styles/index.css')
 	// endbuild
 	// build:js scripts/vendor/modernizr.js
 	script(src='/bower_components/modernizr/modernizr.js')
