--- a/app/index.jade
+++ b/app/index.jade
@@ -1,24 +1,17 @@
 extends ./layout.jade
 
 block content
-	.flex-container
-		.parent
-			.child.px-nova
-				h2 Proxima Nova Bold
-				h3 Proxima Nova Semibold
-				h4 Proxima Nova Medium
-				h5 Proxima Nova Regular
-				h6 Proxima Nova Light
-				p Proxima Nova Thin
-			.child.px-nova.soft
-				h2 Proxima Nova Soft Bold
-				h3 Proxima Nova Soft Semibold
-				h4 Proxima Nova Soft Medium
-				h5 Proxima Nova Soft Regular
-				h6 Proxima Nova Soft Light
-				p Proxima Nova Soft Thin
-			.child.ch-pro-display
-				h2 Chaparral Pro Display Bold
-				h3 Chaparral Pro Display Semibold
-				h5 Chaparral Pro Display Regular
-				h6 Chaparral Pro Display Light
+	.border-box
+		.top-half
+			.logo-text
+				h3	92<span class="logo-trans">nd</span> Co.
+		.bottom-half
+			.menu
+				.item
+					a About
+				.item
+					a Services
+				.item
+					a Projects
+				.item
+					a Contact
