--- a/app/partials/_head.jade
+++ b/app/partials/_head.jade
@@ -10,18 +10,11 @@ head
 	// endbower
 	// endbuild
 	// build:css styles/main.css
-	link(rel='stylesheet', href='styles/index.css')
+	link(rel='stylesheet', href='styles/main.css')
 	// endbuild
 	// build:js scripts/vendor/modernizr.js
 	script(src='/bower_components/modernizr/modernizr.js')
 	// endbuild
 	// typekit fonts
 	script.
-		(function(d) {
-		  var config = {
-		    kitId: 'jsf4gkm',
-		    scriptTimeout: 3000,
-		    async: true
-		  },
-		  h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
-		})(document);
+		document.documentElement.className += ' wf-loading';
