--- a/app/styles/_layout.scss
+++ b/app/styles/_layout.scss
@@ -1,26 +1,21 @@
-.flex-container {
-  /* We first create a flex layout context */
-  display: flex;
-  
-  /* Then we define the flow direction and if we allow the items to wrap 
-   * Remember this is the same as:
-   * flex-direction: row;
-   * flex-wrap: wrap;
-   */
-  flex-flow: row wrap;
-  
-  /* Then we define how is distributed the remaining space */
-  justify-content: space-around;
+body {
+  background: #fafafa;
+  color: #333;
 }
 
-.flex-container .parent {
+html, body {
+  height: 100%;
   display: flex;
-  height: 300px; /* Or whatever */
+  justify-content: center;
+  align-items: center;
 }
 
-.flex-container .child {
-  width: 200px;  /* Or whatever */
-  height: 150px; /* Or whatever */
-  margin: auto;  /* Magic! */
-  padding: 5px;
+.border-box .top-half {
+  padding: 10px;
+  border-bottom: 1px solid black;
+}
+
+.border-box .bottom-half {
+  padding: 10px;
+  display: block;
 }
