added some styling

--- a/app/index.jade
+++ b/app/index.jade
@@ -4,14 +4,14 @@ block content
 	.border-box
 		.top-half
 			.logo-text
-				h3	92<span class="logo-trans">nd</span> Co.
+				h1 92<span class="logo-trans">nd</span> Co.
 		.bottom-half
 			.menu
 				.item
-					a About
+					a(href='#') About
 				.item
-					a Services
+					a(href='#') Services
 				.item
-					a Projects
+					a(href='#') Projects
 				.item
-					a Contact
+					a(href='#') Contact
