--- a/app/styles/_menu.scss
+++ b/app/styles/_menu.scss
@@ -1,8 +1,31 @@
+.border-box .bottom-half {
+  display: block;
+}
+
 .menu {
   display: flex;
 }
 
-.item {
-	margin: auto;
-	//box-sizing: 
+.item a {
+	font-family: $px-nova-soft;
+  font-weight: 100;
+  font-size: 115%;
+  color: $primary-text-color;
+  text-decoration: none;
 }
+
+.item {
+	margin: 5px auto;
+	padding: 10px 15px 10px 15px;
+	
+	&:hover {
+		background-color: $bg-lighter-6;
+		a {
+			//color: $bg-color;
+			color: $primary-text-color;
+			font-weight: 300;
+		}
+	}
+
+}
+
