--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,5 +1,5 @@
 // Normalize
-@import script(src='/bower_components/normalize-css/normalize.css');
+@import '/bower_components/normalize-css/normalize.css';
 
 // Fonts (from google)
 // @import url(https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700);
