--- a/app/styles/_layout.scss
+++ b/app/styles/_layout.scss
@@ -7,5 +7,9 @@ html, body {
   height: 100%;
   display: flex;
   justify-content: center;
-  align-items: center;
+  //align-items: center;
+}
+
+.border-box {
+  vertical-align: middle;
 }
