--- a/app/styles/_logo.scss
+++ b/app/styles/_logo.scss
@@ -1,8 +1,8 @@
 $font-size: 85px;
 
 .border-box .top-half {
-  padding: 10px;
-  border-bottom: 1px solid black;
+  padding: 10px 10px 0px 10px;
+  border-bottom: 2px solid $primary-text-color;
 }
 
 .logo-text h1 {
