--- a/app/index.jade
+++ b/app/index.jade
@@ -1,17 +1,18 @@
 extends ./layout.jade
 
 block content
-	.border-box
-		.top-half
-			.logo-text
-				h1 92<span class="logo-trans">nd</span> Co.
-		.bottom-half
-			.menu
-				.item
-					a(href='#') About
-				.item
-					a(href='#') Services
-				.item
-					a(href='#') Projects
-				.item
-					a(href='#') Contact
+	.flex-container
+		.main-box
+			.top-half
+				.logo-text
+					h1 92<span class="logo-trans">nd</span> Co.
+			.bottom-half
+				.menu
+					.item
+						a(href='#') About
+					.item
+						a(href='#') Services
+					.item
+						a(href='#') Projects
+					.item
+						a(href='#') Contact
