--- a/app/styles/_logo.scss
+++ b/app/styles/_logo.scss
@@ -1,6 +1,6 @@
 $font-size: 85px;
 
-.border-box .top-half {
+.main-box .top-half {
   padding: 10px 10px 0px 10px;
   border-bottom: 2px solid $primary-text-color;
 }
