--- a/app/styles/_layout.scss
+++ b/app/styles/_layout.scss
@@ -10,6 +10,21 @@ html, body {
   //align-items: center;
 }
 
-.border-box {
-  vertical-align: middle;
+.flex-container {
+  display: -webkit-flex;
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.main-box {
+  background: white;
+  box-shadow: 1px 1px 1px 1px rgba(34, 36, 38, 0.15);
+  padding: 2em 3em;
+  //border-radius: 0.28571429rem;
+  border: 1px solid rgba(38, 34, 40, 0.8);
+  margin-top: 25%;
+  margin-bottom: 75%;
 }
