added dist to git for hosting

--- a/app/index.jade
+++ b/app/index.jade
@@ -3,16 +3,13 @@ extends ./layout.jade
 block content
 	.flex-container
 		.main-box
-			.top-half
-				.logo-text
-					h1 92<span class="logo-trans">nd</span> Co.
-			.bottom-half
-				.menu
-					.item
-						a(href='#') About
-					.item
-						a(href='#') Services
-					.item
-						a(href='#') Projects
-					.item
-						a(href='#') Contact
+			img(src='/images/pc_b.png')
+		.bottom-box
+			.break-wrapper
+			.break-links
+				a(href="https://github.com/pcooney10")
+					i.fa.fa-github
+				a(href="https://twitter.com/pcooney10")
+					i.fa.fa-twitter
+				a(href="https://linkedin.com/in/pcooney10")
+					i.fa.fa-linkedin
