--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -4,6 +4,9 @@
 // Fonts (from google)
 // @import url(https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700);
 
+// fontawesome
+@import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css);
+
 //Wait for typekit to load page
 @import 'typekit';
 
