--- a/app/styles/_layout.scss
+++ b/app/styles/_layout.scss
@@ -1,9 +1,13 @@
 body {
   background: $bg-color;
   color: $primary-text-color;
+  //top border
+  border-style: solid none none;
+  border-top-width: 4px;
+  border-top-color: #000;
 }
 
-html, body {
+body {
   height: 100%;
   display: flex;
   justify-content: center;
@@ -15,16 +19,49 @@ html, body {
   display: flex;
   -webkit-align-items: center;
   align-items: center;
+  flex-direction: column;
   width: 100%;
   height: 100%;
 }
 
 .main-box {
-  background: white;
-  box-shadow: 1px 1px 1px 1px rgba(34, 36, 38, 0.15);
+  //background: white;
+  //box-shadow: 1px 1px 1px 1px rgba(34, 36, 38, 0.15);
   padding: 2em 3em;
   //border-radius: 0.28571429rem;
-  border: 1px solid rgba(38, 34, 40, 0.8);
-  margin-top: 25%;
-  margin-bottom: 75%;
+  //border: 1px solid rgba(38, 34, 40, 0.8);
+  margin-top: 50%;
+  margin-bottom: 10%;
+  text-align: center;
+}
+
+.bottom-box {
+  display: blocsk;
+  font-size: 130%;
+  text-align: center;
+}
+
+.bottom-box p, a {
+  font-family: $px-nova-soft;
+  font-weight: 500;
+  font-size: 120%;
+  color: $primary-text-color;
+  text-decoration: none;
+  //font-variant: small-caps;
+}
+
+.bottom-box a {
+  padding: 7px;
+}
+
+.break-links {
+  padding: 15px;
+  //border-bottom: 2px solid #333;
+}
+
+.break-wrapper {
+  border-bottom: 1px solid #333;
+  p {
+    margin-bottom: 10px;
+  }
 }
