renamed social icons getting blocked by Adblock Plus

--- a/app/index.jade
+++ b/app/index.jade
@@ -10,6 +10,6 @@ block content
 				a(href="https://github.com/pcooney10")
 					i.fa.fa-github
 				a(href="https://twitter.com/pcooney10")
-					i.fa.fa-twitter
+					i.fa.fa-twtr
 				a(href="https://linkedin.com/in/pcooney10")
-					i.fa.fa-linkedin
+					i.fa.fa-lnkd
